--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </div>
 
         <div class="project-card">
-          <img class="project-image" src="img/Progress-steps.png" />
+          <img class="project-image" src="/img/Progress-steps.png" />
           <h3>Progress Steps</h3>
           <p class="subtext">
             This is the second project i enjoyed doing. Some text about it.
