--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             facts.
           </p>
           <button class="btn-project">
-            <a href="#">Click to see the code</a>
+            <a href="https://github.com/bobrowiczkrzysztof/cat-facts">Click to see the code</a>
           </button>
         </div>
 
