--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
           <img class="project-image" src="/img/Progress-steps.png" />
           <h3>Progress Steps</h3>
           <p class="subtext">
-            This is the second project i enjoyed doing. Some text about it.
+            Manipulating the DOM to go further.
           </p>
           <button class="btn-project">
-            <a href="#">Click to see the code</a>
+            <a href="https://github.com/bobrowiczkrzysztof/progress-steps">Click to see the code</a>
           </button>
         </div>
 
@@ -153,10 +153,10 @@
           <img class="project-image" src="img/FAQ.png" />
           <h3>FAQ</h3>
           <p class="subtext">
-            This is the fourth project i enjoyed doing. Some text about it.
+            Dynamic FAQ with an option to show and hide the answer.
           </p>
           <button class="btn-project">
-            <a href="#">Click to see the code</a>
+            <a href="https://github.com/bobrowiczkrzysztof/FAQ">Click to see the code</a>
           </button>
         </div>
       </div>
