--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <img class="project-image" src="/img/Progress-steps.png" />
           <h3>Progress Steps</h3>
           <p class="subtext">
-            Manipulating the DOM to go further.
+            Manipulating the DOM to make dynamic changes in html and go further.
           </p>
           <button class="btn-project">
             <a href="https://github.com/bobrowiczkrzysztof/progress-steps">Click to see the code</a>
