--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="socials">
           <div>
             <i>
-              <a href="#" class="social">
+              <a href="https://github.com/bobrowiczkrzysztof" class="social">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   fill="#ffffff"
@@ -63,7 +63,7 @@
             </i>
           </div>
           <div>
-            <a href="#" class="social">
+            <a href="https://www.linkedin.com/in/krzysztof-bobrowicz-300349218/" class="social">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="#ffffff"
@@ -78,7 +78,7 @@
             </a>
           </div>
           <div>
-            <a href="#" class="social">
+            <a href="mailto:bobrowiczk@gmail.com" class="social">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="#ffffff"
@@ -113,14 +113,13 @@
       <h2>Projects</h2>
       <div class="project-container">
         <div class="project-card">
-          <img class="project-image" src="img/cat-fact.png" />
-          <h3>Cat Facts</h3>
+          <img class="project-image" src="img/keycode.png" />
+          <h3>KeyCode</h3>
           <p class="subtext">
-            Using Fetch Api to retrieve information from site with random cat
-            facts.
+            Click any key to receive the info about the event keycode.
           </p>
           <button class="btn-project">
-            <a href="https://github.com/bobrowiczkrzysztof/cat-facts">Click to see the code</a>
+            <a href="https://bobrowiczkrzysztof.github.io/keycode-app">Click to see the app</a>
           </button>
         </div>
 
@@ -131,32 +130,30 @@
             Manipulating the DOM to make dynamic changes in html and go further.
           </p>
           <button class="btn-project">
-            <a href="https://github.com/bobrowiczkrzysztof/progress-steps">Click to see the code</a>
+            <a href="https://bobrowiczkrzysztof.github.io/progress-app">Click to see the app</a>
           </button>
         </div>
 
         <div class="project-card">
-          <img class="project-image" src="img/Increment.png" />
-          <h3>Increment Counter</h3>
+          <img class="project-image" src="img/canvas.png" />
+          <h3>Drawing App</h3>
           <p class="subtext">
-            Simple yet effective widget that shows the current number of fans
-            starting from 0.
+  You can pick whichever color you like, select the width of the pencil and erase the canvas.
           </p>
           <button class="btn-project">
-            <a href="https://github.com/bobrowiczkrzysztof/Increment-Counter"
-              >Click to see the code</a
-            >
+            <a href="https://bobrowiczkrzysztof.github.io/drawing-app"
+              >Click to see the app</a>
           </button>
         </div>
 
         <div class="project-card">
-          <img class="project-image" src="img/FAQ.png" />
-          <h3>FAQ</h3>
+          <img class="project-image" src="img/movie-app.png" />
+          <h3>Movie App</h3>
           <p class="subtext">
-            Dynamic FAQ with an option to show and hide the answer.
+            Movie app that uses The Movie Database Api. Implemented search function.
           </p>
           <button class="btn-project">
-            <a href="https://github.com/bobrowiczkrzysztof/FAQ">Click to see the code</a>
+            <a href="https://bobrowiczkrzysztof.github.io/movie-app">Click to see the app</a>
           </button>
         </div>
       </div>
