--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h2 class="text">About me</h2>
         <p class="text">
           Good to see you! My name is Krzysztof Bobrowicz and I'm an aspiring
-          Web Developer. I've been programming since the beginnings of 2020 and
+          Web Developer. I've been programming since the 2020 and
           it turned out to be my passion. I consider myself as a Front End
           developer, but I also like to work on Back End projects.
         </p>
